feat: offline screen (#418)
The goal of this commit is to improve how the app behaves when the user is
offline by adding proper offline screens and fixing some confusing or
broken offline behaviors.
Right now, when the user has no connection, some screens either look
empty, get stuck in loading states, or behave like data does not exist,
which makes it hard to understand what is actually going on. I try to
make these cases clearer here.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="default_description">No bio yet.</string>
     <string name="view_achievements">View all achievements →</string>
     <string name="no_achievements">No achievements yet!</string>
+    <string name="no_achievements_offline">Out in the wild - back online to see</string>
 
     <!-- Edit Profile screen -->
     <string name="edit_profile_title">Edit Profile</string>
@@ -96,6 +97,9 @@
     <string name="map_my_posts">My posts</string>
     <string name="map_reports">Reports</string>
     <string name="cluster_group_position">%1$d / %2$d</string>
+    <string name="map_offline_placeholder_title">Nothing to display</string>
+    <string name="map_offline_placeholder_subtitle">You’re offline and the map never loaded.</string>
+    <string name="map_offline_placeholder_hint">  We promise we’re not hiding anything.</string>
 
     <!-- Achievements screen -->
     <string name="achievements">Achievements</string>
@@ -121,8 +125,6 @@
     <string name="confidence">Confidence</string>
     <string name="add_description">Add a description</string>
     <string name="description_placeholder">Share what you observed… behavior, habitat, weather conditions, or any interesting details!</string>
-    <string name="share_location">Share Location</string>
-    <string name="share_location_description">Help others discover nearby animals</string>
     <string name="cancel_button">Cancel &amp; Retry</string>
     <string name="confirm_button">✓ Confirm &amp; Post</string>
     <string name="footer">Your sighting will be shared with the wildlife community</string>
@@ -214,6 +216,10 @@
     <string name="offline_subtitle">Please check your internet connection.</string>
     <string name="offline_message">This is not a bug… it\'s a purr-formance issue :O</string>
     <string name="no_discoveries">No discoveries yet, start exploring!</string>
+    <string name="friends_offline_title">Friends not observed</string>
+    <string name="friends_offline_subtitle">Connection unavailable</string>
+    <string name="friends_offline_message">Reconnect to continue tracking social habitats.</string>
+
 
     <!-- Post details screen -->
     <string name="post_details_delete_post">Delete post</string>
