feat: Add Filters to HomeScreen (#391)
## Description
This PR adds the interactions with the filters from the HomeScreen UI.
Basically, there's a floating action button at the bottom right of the
screen that, when clicked, opens a Filters Manager which allows the user
to choose which filters to activate and configure them.

Here's the list of the possible filters:      
- **fromAuthor**: the user enters the name of a specific author to see
its posts, null by default
- **fromPlace**: the user enters the name of a specific location to see
posts that were taken there, null by default
- **ofAnimal**: the user enters the name of a specific animal to see any
posts with this animal appearing, null by default
- **onlyFriendsPosts**: the user activates it to only see posts from
theirs friends, false by default
- **onlyMyPosts**: the user activates it to only see its posts, false by
default

A few subtleties about these filters:
- For the **fromAuthor**, **fromPlace** and **ofAnimal** filters, once
it's set, a cross button appears next to them to individually reset
their value.
- The **onlyFriendsPosts** and **onlyMyPosts** filters can't be active
at the same time. If the user tries to enable one while the other is
already enabled, the other will automatically be deactivated.
- Filters are applied only when the user clicks the **Apply** button. If
not, they are immediately restored to their previous values. The same
happens if the user quits the Filters Manager.
- All filters can be restored to their default values by clicking on the
**Reset** button.

About the filtering system:
- For true/false filters, the logic is basic: the system checks whether
the filter is set to true. If it is, it keeps only the posts that
satisfy the corresponding condition (i.e the author is a friend for
onlyFriendsPosts, or the author is the current user for onlyMyPosts).
- For string filters, the process is more complex. In the first version,
the system only kept posts whose parameter exactly mat

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,16 @@
     <!-- Main Activity -->
 
     <!-- Home screen -->
+    <string name="no_posts">No posts were found…</string>
     <string name="app_name">Wildex</string>
+    <string name="filters_title">Filters</string>
+    <string name="author">Author</string>
+    <string name="location">Location</string>
+    <string name="animal">Animal</string>
+    <string name="onlyFriendsPosts">See only my friends posts</string>
+    <string name="onlyMyPosts">See only my posts</string>
+    <string name="apply">Apply</string>
+    <string name="reset">Reset</string>
 
     <!-- Placeholder screen -->
 
@@ -74,9 +83,6 @@
     <!-- Collection screen -->
     <string name="empty_current_collection">No animals in your collection yet.\nStart exploring…</string>
     <string name="empty_other_collection">No animals in this collection.</string>
-
-    <!-- Home screen -->
-    <string name="no_nearby_posts">No nearby posts.\nStart posting…</string>
 
     <!-- Notification screen -->
     <string name="notifications_title">Notifications</string>
