--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,10 +47,10 @@
     <string name="settings">Settings</string>
     <string name="edit_profile">Edit profile</string>
     <string name="notifications">Notifications</string>
-    <string name="user_type">User type</string>
+    <string name="user_type">Status</string>
     <string name="regular_type">Regular</string>
     <string name="professional_type">Professional</string>
-    <string name="appearance">Appearance</string>
+    <string name="appearance">Theme</string>
     <string name="light_mode">Light</string>
     <string name="dark_mode">Dark</string>
     <string name="system_default">Auto</string>
@@ -58,8 +58,8 @@
     <string name="permission_required">Permission Required</string>
     <string name="enable_in_settings">Notification permission is required. Please enable it in Settings.</string>
     <string name="open_settings">Open Settings</string>
-    <string name="user_type_change_validation_title">Change user type ?</string>
-    <string name="user_type_change_validation_text">If you change your user type from PROFESSIONAL to REGULAR, you will be unassigned from every report you have self-assigned</string>
+    <string name="user_type_change_validation_title">Change status ?</string>
+    <string name="user_type_change_validation_text">If you change your status from professional to regular you will be unassigned from every report you have self-assigned</string>
     <string name="user_type_change_validation_confirm">Confirm</string>
 
     <!-- Friend screen -->
