fix: correct profile creation bug and add on boarding stages (#415)
- Defined a new enum type `OnBoardingStage`.
- Refactoring the `User` type to include an `OnBoardingStage` field.
- Updated the navigation host's start destination's condition in the
main app composable.
- Updated the animal detection response to exclude `blank` and
`vehicle` and `human`.
- Updated user cache definition to include `onBoardingStage`.
- Fix some failing expandable text test in post details screen test.
- Adapted Settings delete account confirmation dialog colors to our
current theme.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,18 @@
     <string name="sign_in">Sign in with Google</string>
     <string name="cancel_sign_in">Sign-in cancelled</string>
     <string name="collection">My Collection</string>
+    <string name="welcome">Welcome! Let\'s get started</string>
+    <string name="first_name">First Name*</string>
+    <string name="last_name">Last Name*</string>
+    <string name="username">Username*</string>
+    <string name="next">Next</string>
+    <string name="account_type_title">Select Account Type</string>
+    <string name="user_type_info">Choosing to be a professional user will allow you to see animal reports and be assigned to them. Make sure you are eligible.</string>
+    <string name="user_type_setting">You change this anytime in your settings.</string>
+    <string name="complete">Complete</string>
+    <string name="tag_line">Discover the wild around you</string>
+    <string name="step">Step %1$d/%2$d</string>
+
 
     <!-- Profile screen -->
     <string name="profile">My Profile</string>
@@ -256,5 +268,12 @@
     <string name="post_details_no_maps_found">No Google Maps app found</string>
     <string name="post_details_location_copied">Location copied</string>
     <string name="post_details_maps_link">https://www.google.com/maps/search/?api=1&amp;query=%1$s,%2$s</string>
+
+    <!-- Country dropdown -->
+    <string name="no_countries_found">No countries found</string>
+    <string name="bio_placeholder">Tell people a thing or two about yourself…</string>
+    <string name="bio_support">%1$s/%2$s characters</string>
+    <string name="country">Country</string>
+    <string name="initializing_user">Initializing user…</string>
 
 </resources>
